--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -157,6 +157,17 @@ define U-Boot/rocktech-mpc1903-rk3399
   USE_RKBIN:=1
 endef
 
+define U-Boot/rockchip-pico3399-rk3399
+  BUILD_SUBTARGET:=armv8
+  NAME:=rockchip pico3399
+  BUILD_DEVICES:= \
+    rockchip_pico3399
+  DEPENDS:=+PACKAGE_u-boot-rockchip-pico3399-rk3399:arm-trusted-firmware-rk3399
+  PKG_BUILD_DEPENDS:=arm-trusted-firmware-rockchip-vendor
+  ATF:=rk3399_bl31_v1.35.elf
+  USE_RKBIN:=1
+endef
+
 # RK3568 boards
 
 define U-Boot/mrkaio-m68s-rk3568
@@ -254,6 +265,7 @@ UBOOT_TARGETS := \
   rockpro64-rk3399 \
   rongpin-king3399-rk3399 \
   rocktech-mpc1903-rk3399 \
+  rockchip-pico3399-rk3399 \
   nanopi-r2c-rk3328 \
   nanopi-r2s-rk3328 \
   orangepi-r1-plus-rk3328 \
